@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-25T08:17:33Z",
+  "timestamp" : "2023-09-25T16:17:45Z",
   "count_outdated" : 160850,
   "uniques_outdated" : 1704,
-  "count" : 164168,
+  "count" : 164262,
   "uniques" : 1735,
   "clones" : [
     {
       "timestamp": "2023-09-11T00:00:00Z",
-      "count": 31,
-      "count_minmax": [ 31, 51 ],
-      "count_decinc": [ 20, 51 ],
+      "count": 14,
+      "count_minmax": [ 14, 51 ],
+      "count_decinc": [ 37, 51 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
-      "count": 113,
-      "count_minmax": [ 113, 113 ],
-      "count_decinc": [ 0, 113 ],
+      "count": 207,
+      "count_minmax": [ 113, 207 ],
+      "count_decinc": [ 0, 207 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
