@@ -1,10 +1,10 @@
 {
-  "count": 3298,
+  "count": 3375,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-09-11T00:00:00Z",
-      "count": 31,
+      "count": 14,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
-      "count": 113,
+      "count": 207,
       "uniques": 3
     }
   ]
